--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="slider">
             <ul class="slider__items">
-                <li class="slider__item slider__item--shown" data-order="0">
+                <li class="slider__item">
                     <div class="overlay"></div>
                     <div class="slider__item--content">
                         <h1 class="item__content--heading">
@@ -28,7 +28,7 @@
                         </p>
                     </div>
                 </li>
-                <li class="slider__item slider__item--left" data-order="1">
+                <li class="slider__item">
                     <div class="overlay"></div>
                     <div class="slider__item--content">
                         <h1 class="item__content--heading">
@@ -42,7 +42,7 @@
                         </p>
                     </div>
                 </li>
-                <li class="slider__item slider__item--left" data-order="2">
+                <li class="slider__item">
                     <div class="overlay"></div>
                     <div class="slider__item--content">
                         <h1 class="item__content--heading">
@@ -56,7 +56,7 @@
                         </p>
                     </div>
                 </li>
-                <li class="slider__item slider__item--left" data-order="3">
+                <li class="slider__item">
                     <div class="overlay"></div>
                     <div class="slider__item--content">
                         <h1 class="item__content--heading">
@@ -70,25 +70,58 @@
                         </p>
                     </div>
                 </li>
+                <li class="slider__item">
+                    <div class="overlay"></div>
+                    <div class="slider__item--content">
+                        <h1 class="item__content--heading">
+                            Fifth Heading
+                        </h1>
+                        <p class="item__content--paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Numquam, quisquam dolore quaerat accusantium
+                            quibusdam nemo! Sed vel soluta quibusdam totam nulla
+                            accusamus.
+                        </p>
+                    </div>
+                </li>
+                <li class="slider__item">
+                    <div class="overlay"></div>
+                    <div class="slider__item--content">
+                        <h1 class="item__content--heading">
+                            Sixth Heading
+                        </h1>
+                        <p class="item__content--paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Numquam, quisquam dolore quaerat accusantium
+                            quibusdam nemo! Sed vel soluta quibusdam totam nulla
+                            accusamus.
+                        </p>
+                    </div>
+                </li>
             </ul>
-            <div class="slider-controls">
-                <div class="slider__controls--bullets">
-                    <ul class="bullets__items">
-                        <li class="bullets__item active" data-slider="0"></li>
-                        <li class="bullets__item" data-slider="1"></li>
-                        <li class="bullets__item" data-slider="2"></li>
-                        <li class="bullets__item" data-slider="3"></li>
-                    </ul>
-                </div>
-                <div class="slider__controls--arrows">
-                    <div class="arrow-right" data-goTo='1'>
-                        <img src="./images/arrow_right.svg" alt="" />
-                    </div>
-                    <div class="arrow-left" data-goTo="-1">
-                        <img src="./images/arrow_left.svg" alt="" />
-                    </div>
-                </div>
-            </div>
         </div>
     </body>
 </html>
+
+
+<!-- <div class="slider-controls">
+    <div class="slider__controls--bullets">
+        <ul class="bullets__items">
+            <li class="bullets__item active" data-slider="0"></li>
+            <li class="bullets__item" data-slider="1"></li>
+            <li class="bullets__item" data-slider="2"></li>
+            <li class="bullets__item" data-slider="3"></li>
+            <li class="bullets__item" data-slider="4"></li>
+            <li class="bullets__item" data-slider="5"></li>
+        </ul>
+    </div>
+    <div class="slider__controls--arrows">
+        <div class="arrow-right" data-goTo='1'>
+            <img src="./images/arrow_right.svg" alt="" />
+        </div>
+        <div class="arrow-left" data-goTo="-1">
+            <img src="./images/arrow_left.svg" alt="" />
+        </div>
+    </div>
+</div>
+ -->
